# Langra

./: .eslintrc.json  .gitignore  .prettierignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  LINTING_MIGRATION.md  README.md  RELEASE_QUICKSTART.md  SETUP_SUMMARY.md  commitlint.config.cjs  index.html  package-lock.json  package.json  rustfmt.toml
.github/workflows/: auto-release.yml  build.yml
.husky/: pre-commit  pre-push
docs/: BRANCH_PROTECTION.md  BUILDING.md  CICD.md  CODE_STYLE.md  README.md  RELEASE.md  TROUBLESHOOTING.md
scripts/: bump-version.js
src/: App.css  App.tsx  LoginDialog.tsx  NormalWindow.tsx  PermissionModal.css  PermissionModal.tsx  PreferencesDialog.tsx  SettingsDialog.tsx  StreamingText.tsx  SuccessScreen.tsx  TranslationPopup.tsx  WelcomeScreen.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  Info.plist  Langra.entitlements  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/resources/: copy.applescript  paste.applescript  replace.applescript
src-tauri/src/: insertion.rs  keyboard_monitor.rs  language_detector.rs  lib.rs  main.rs  resize.rs  settings.rs  translator.rs  translator.rs.old  tray.rs  utils.rs  windows.rs
src-tauri/src/translator/: chunking.rs  client.rs  detect_language.rs  enhance.rs  mod.rs  translate.rs  types.rs
