[package]
name = "Langra"
version = "0.1.1"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "langra_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api", "tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-deep-link = "2"
tauri-plugin-updater = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
arboard = "3.2.0"
enigo = { version = "0.2.0", features = ["xdo"] }
mouse_position = "0.1.3"
active-win-pos-rs = "0.8"
get-selected-text = "0.1.6"
parking_lot = "0.12.1"
reqwest = { version = "0.11", features = ["json", "stream"] }
tokio = { version = "1", features = ["full"] }
futures-util = "0.3"
anyhow = "1.0"
once_cell = "1.17.1"
dirs = "6.0"
url = "2"

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.24"
objc = "0.2.7"
core-graphics = "0.23"
core-foundation = "0.9"

[target.'cfg(not(target_os = "macos"))'.dependencies]
rdev = "0.5"

[target.'cfg(target_os = "linux")'.dependencies]
xcb = "1.4.0"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.61.3", features = ["Win32_UI_WindowsAndMessaging", "Win32_System_Threading", "Win32_Foundation"] }

